# textalytics-demo-service

./: .gitignore  README.md  main.py  pyproject.toml
